# rhetorical-semantic-metrics

./: .gitignore  CITATION.cff  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
data/frozen/: all_abstract_level_metrics.csv  analyzed_pmids_and_titles.csv
data_public/: README.md
data_public/candidate_records_redacted/: periodontal_clinical_200_candidates_redacted.csv  periodontal_reviews_200_candidates_redacted.csv
data_public/primary_statistics/: dataset_audit.csv  dataset_level_metric_summary_mean_sd_sem.csv  llm_confidence_by_role_and_dataset.csv  role_distribution_mean_sentence_counts.csv  role_level_metric_summary.csv  statistical_comparison_reviews_vs_clinical.csv  statistical_comparison_sorted_by_effect_size.csv  table_mean_sd_reviews_vs_clinical.csv
docs/: data_dictionary.md  known_limitations.md  method_overview.md  metric_definitions.md  reproducibility_notes.md  source_of_truth_hierarchy.md
examples/: demo_abstracts.csv
notebooks/: walkthrough.ipynb
rsm/: __init__.py  analysis.py  labeling.py  metrics.py  pubmed.py
scripts/: 01_prepare_candidate_records.py  02_segment_abstracts.py  03_label_rhetorical_roles.py  04_compute_embeddings.py  05_compute_role_aware_metrics.py  06_primary_statistics.py  07_sentence_count_sensitivity.py  08_embedding_model_comparison.py  09_positional_ablation.py  10_surface_lexical_baselines.py  11_perturbation_diagnostics.py  12_generate_manuscript_figures_tables.py  13_validate_release_outputs.py  build_pubmed_datasets.py  run_analysis.py
tests/: test_metrics.py
(+66 files in other folders)
