[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rhetorical-semantic-metrics"
version = "0.1.0"
description = "Rhetorical-semantic coherence metrics for scientific abstracts"
requires-python = ">=3.10"
authors = [{name = "Carlo Galli"}]
readme = "README.md"
dependencies = [
  "biopython>=1.83",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "sentence-transformers>=2.7",
  "spacy>=3.7",
  "openai>=1.40",
  "tqdm>=4.66",
  "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsm*"]
