[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhetorical-semantic-metrics"
version = "0.1.0"
description = "Role-aware rhetorical-semantic metrics for scientific abstracts"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Carlo Galli"}]
license = {text = "MIT"}
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "spacy>=3.7",
  "sentence-transformers>=2.6",
  "openai>=1.0",
  "requests>=2.31",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["src"]
